dataset1235/2025-2/1955397009/users/2372342006/executions/1107611404_4233865845.log
== RUN (2025-08-21 13:15:03)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))

tempF = tempC*9/5+32

print (round (tempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 13:15:07)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))

tempF = tempC*9/5+32

print (round (tempF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:13:43)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))



print (round (tempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print (round (tempF,2))
                  ^^^^^
NameError: name 'tempF' is not defined. Did you mean: 'tempC'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:14:47)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))

tempF = tempC*9/5+32

print (round (tempF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 13:11:35)
-- CODE: 
tempC = float(input("Temperatura em Celsius: "))

tempK = tempC + 273.15

print (round (tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em Celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em Celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em Celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em Celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em Celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em Celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
